# aoc_2024

./: Cargo.toml  readme.md
day-1/: part_1.rs  part_2.rs
day-10/: part-1.rs  part-2.rs
day-11/: part-1.rs  part-2.rs
day-12/: part-1.rs  part-2.rs
day-13/: part-1.rs  part-2.rs
day-2/: part_2.rs
day-3/: part-1.rs  part-2.rs
day-4/: part-1.rs  part-2.rs
day-5/: part-1.rs  part-2.rs
day-6/: part-1.rs  part-2.rs
day-7/: part-2.rs
day-8/: part-1.rs  part-2.rs
day-9/: part-1.rs  part-2.rs
solutions/day-1/: part-1.rs  part-2.rs
solutions/day-10/: part-1.rs  part-2.rs
solutions/day-11/: part-1.rs  part-2.rs
solutions/day-12/: part-1.rs  part-2.rs
solutions/day-13/: part-1.rs  part-2.rs
solutions/day-14/: part-1.rs  part-2.rs
solutions/day-15/: part-1.rs  part-2.rs
solutions/day-16/: part-1.rs  part-2.rs
solutions/day-17/: part-1.rs  part-2.rs
solutions/day-18/: part-1.rs  part-2.rs
solutions/day-19/: part-1.rs  part-2.rs
solutions/day-2/: part-2.rs
solutions/day-20/: part-1.rs  part-2.rs
solutions/day-21/: c.rs  part-1.rs  part-2.rs
solutions/day-22/: part-1.rs  part-2.rs
solutions/day-23/: part-1.rs  part-2.rs
solutions/day-24/: part-1.rs
solutions/day-25/: part-1.rs
solutions/day-3/: part-1.rs  part-2.rs
solutions/day-4/: part-1.rs  part-2.rs
solutions/day-5/: part-1.rs  part-2.rs
solutions/day-6/: part-1.rs  part-2.rs
solutions/day-7/: part-2.rs
solutions/day-8/: part-1.rs  part-2.rs
solutions/day-9/: part-1.rs  part-2.rs
